tests/stage3/semantic_immutable_field_assign.err
parse error
line: 9
immutable field target
