tests/stage3/semantic_immutable_field_assign.imp
module app.main

struct Point {
    x: i32
}

function main() {
    value p: Point = Point { x: 1 }
    p.x = 2
}
